tests/hopix/hopix/typechecker/good/arith3.hopix
val x = 1 + 1 * 3
val y = x / 2 - 3