tests/hopix/hopix/typechecker/bad/arith2.hopix
val x : string = 1 + 1 * 3